# leadgen-scraper

./: README.md  business_contacts.db  main.py  pyproject.toml
src/leadgen_scraper/: __init__.py  base_scraper.py  csv_utils.py  database.py  indiamart.py  justdial.py  logging_config.py  models.py  rate_limiter.py  user_agents.py  webui.py
