[project]
name = "leadgen-scraper"
version = "0.1.0"
description = "Web scraper for lead generation targeting IndiaMart and JustDial"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "parsel>=1.9.0",
    "tenacity>=8.5.0",
    "loguru>=0.7.0",
    "pydantic>=2.9.0",
    "sqlalchemy>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "python-multipart>=0.0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[dependency-groups]
dev = [
    "ruff>=0.15.9",
]
